--- a/TriadApp/templates/TriadApp/admin/admin.html
+++ b/TriadApp/templates/TriadApp/admin/admin.html
@@ -79,6 +79,12 @@
                             <span class="ml-2">Supply Management</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="{% url 'admin:index' %}" 
+                           class="flex items-center px-6 py-3 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-200">
+                            <span class="ml-2">Super Admin Dashboard</span>
+                        </a>
+                    </li>
                 
                 </ul>
             </nav>
