--- a/TriadApp/templates/TriadApp/superadmin/super_admin.html
+++ b/TriadApp/templates/TriadApp/superadmin/super_admin.html
@@ -83,6 +83,9 @@
                         <a href="{% url 'super_admin_profile' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Profile</a>
                     </li>
                     <li>
+                        <a href="{% url 'admin:index' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Super Admin Dashboard</a>
+                    </li>
+                    <li>
                         <a href="#" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Settings</a>
                     </li>
                     <li class="mt-auto border-t border-gray-700 pt-4">
