--- a/TriadApp/templates/TriadApp/admin/admin.html
+++ b/TriadApp/templates/TriadApp/admin/admin.html
@@ -56,6 +56,18 @@
                         </a>
                     </li>
                     <li>
+                        <a href="{% url 'admin_profile' %}" 
+                           class="flex items-center px-6 py-3 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-200">
+                            <span class="ml-2">Admin Profile</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'add_employee' %}" 
+                           class="flex items-center px-6 py-3 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-200">
+                            <span class="ml-2">Employee Management</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="{% url 'manage_inventory' %}" 
                            class="flex items-center px-6 py-3 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-200">
                             <span class="ml-2">Inventory Management</span>
@@ -79,12 +91,9 @@
                             <span class="ml-2">Supply Management</span>
                         </a>
                     </li>
-                    <li>
-                        <a href="{% url 'admin:index' %}" 
-                           class="flex items-center px-6 py-3 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-200">
-                            <span class="ml-2">Super Admin Dashboard</span>
-                        </a>
-                    </li>
+
+               
+                   
                 
                 </ul>
             </nav>
